%% Build and check from R:
%% news(db = tools:::.build_news_db_from_package_NEWS_Rd("<Matrix>/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R{} Package \pkg{Matrix}}
\encoding{UTF-8}
\newcommand{\MPR}{\pkg{Matrix} \href{https://R-forge.R-project.org/tracker/index.php?func=detail&aid=#1&group_id=61&atid=294}{PR##1}}

\section{Changes in version 1.7-4 (2025-03-16, svn r5138)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item .
    }
  }
}

\section{Changes in version 1.7-3 (2025-03-05, svn r5126)}{
  \subsection{Bug Fixes}{
    \itemize{
      \item \code{<matrix>} \code{o} \code{<sparseVector>} binary
      \code{"Ops"} work again, returning a matrix (of \code{"Matrix"}).

      \item \code{- new("lgeMatrix")} and more \code{ - <Matrix>} now work.

      \item Use \code{int} instead of \code{Rboolean} in 2x2 cases in \file{utils-R.c}.
    }
  }
}

\section{Changes in version 1.7-2 (2025-01-20, svn r5115)}{
  \subsection{Installation}{
    \itemize{
      \item \pkg{Matrix} can be installed with parallel \command{bmake}.
      Thanks to Sebastian Meyer for the report and patch in \MPR{6861}.
    }
  }
  \subsection{Misc}{
    \itemize{
      \item Test in \file{tests/matprod.R} comparing
      \code{t(x) \%*\% x} and \code{crossprod(x)} is amended to tolerate
      small numerical differences seen under \samp{aarch64} Linux.
    }
  }
}

\section{Changes in version 1.7-1 (2024-10-17, svn r4948)}{
  \subsection{Installation}{
    \itemize{
      \item Installation under architecture-specific builds of \R{}
      works again.  It was broken in \pkg{Matrix} version 1.7-0,
      where changes to \file{src/Makevars} resulted in \env{CPPFLAGS}
      not including \option{-I"${R_INCLUDE_DIR}${R_ARCH}"}.
    }
  }
  \subsection{SuiteSparse}{
    \itemize{
      \item Internal SuiteSparse and METIS library sources are patched
      to avoid possible use of illegal entry points.
    }
  }
  \subsection{C-Level API}{
    \itemize{