@@ -11,9 +11,14 @@ SEXP dense_band(SEXP from, const char *class, int a, int b)
 	int *pdim = INTEGER(dim), m = pdim[0], n = pdim[1];
 	UNPROTECT(1); /* dim */
 
-	/* Need tri[ul](<0-by-0>) and tri[ul](<1-by-1>) to be triangularMatrix */
-	if (a <= 1 - m && b >= n - 1 &&
-	    (class[1] == 't' || m != n || m > 1 || n > 1))
+	/* Need tri[ul](<0-by-0>) and tri[ul](<1-by-1>) */
+	/* to be triangularMatrix                       */
+	/* Don't return 'from' if from@x has attributes */
+	/* (notably 'class' or 'dim'), which can happen */
+	/* if from = matrix_as_dense(..., new=0).       */
+	if ((m == 0 || n == 0 || (a <= 1 - m && b >= n - 1)) &&
+	    (m != n || n > 1 || class[1] == 't') &&
+	    !ANY_ATTRIB(GET_SLOT(from, Matrix_xSym)))
 		return from;
 
 	int ge = 0, sy = 0, tr = 0;
