@@ -5,10 +5,13 @@
 \encoding{UTF-8}
 \newcommand{\MPR}{\pkg{Matrix} \href{https://R-forge.R-project.org/tracker/index.php?func=detail&aid=#1&group_id=61&atid=294}{PR##1}}
 
-\section{Changes in version 1.7-4 (2025-03-16, svn r5138)}{
+\section{Changes in version 1.7-4 (2025-03-16, svn r5142)}{
   \subsection{Bug Fixes}{
     \itemize{
-      \item .
+      \item Methods for \code{band}, \code{triu}, and \code{tril} with
+      signature \code{x="matrix"} returned a formally invalid
+      \code{.geMatrix} (with \code{x} slot of class \code{"matrix"}) in
+      some no-op cases, where no bands are set to zero.
     }
   }
 }
